--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ThinkInvDb": "Data Source=.;Initial Catalog=ThinkInvDb;Integrated Security=True;"
+  }
 }
